--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "chokidar": "^1.4.1",
     "cli-color": "^1.1.0",
     "pretty-error": "^1.2.0",
-    "drafter": "^1.0.0",
+    "drafter": "latest",
     "serve-static": "^1.10.0",
     "socket.io": "^1.3.7",
     "yargs": "^3.31.0"
